# web3-strategy-skills

./: .gitignore  CLAUDE.md  README.md  README_CN.md  deploy.sh
polymarket/btc_5m_predictor/: db.py  pyproject.toml
polymarket/btc_5m_predictor/cli/: __init__.py  cmd_data.py  cmd_deploy.py  cmd_experiment.py  cmd_feature.py  cmd_monitor.py  cmd_train.py
polymarket/btc_5m_predictor/data/: feature_metadata.py  features.py
polymarket/btc_5m_predictor/data/experiments/: EXPERIMENT_SUMMARY.md  cross_combination.json  cross_combination.py  fi_experiments.json  fi_experiments.py  fs2_feature_screening.json  fs2_screen.py  fs3_forward_selection.json  fs3_forward_selection.py  mo1_depth_explore.json  mo1_depth_explore.py
polymarket/btc_5m_predictor/docs/brainstorms/: 2026-04-01-v10-model-optimization-requirements.md
polymarket/btc_5m_predictor/docs/plans/: 2026-03-31-001-feat-ml-iteration-cli-plan.md  2026-04-01-001-feat-v10-model-optimization-plan.md
polymarket/btc_5m_predictor/models/v15_20260401/: cv_predictions_base.parquet  feature_manifest.json  (+6 more)
polymarket/btc_5m_predictor/tests/: test_calibration_eval.py  test_cli_skeleton.py  test_cmd_data.py  test_cmd_deploy.py  test_cmd_experiment.py  test_cmd_feature.py  test_db_ho_auc.py  test_db_migration.py  test_drift_monitor.py  test_ensemble_eval.py  test_explain.py  test_interaction_features.py  test_leakage_check.py  test_overfit_report.py
polymarket/btc_5m_predictor/training/: calibration_eval.py  drift_monitor.py  ensemble_eval.py  explain.py  leakage_check.py  overfit_report.py  pipeline.py  train_pipeline.py
(+105 files in other folders)
